--- a/index.css
+++ b/index.css
@@ -17,3 +17,11 @@ body > div > div {
     flex-direction: column;
 }
 
+.selectName {
+    background: orangered;
+    width: 3rem;
+}
+
+ul {
+    list-style-type: none
+}
